# ragpipes

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  PROTOCOL.md  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml  ruff.toml  secrets.yml.example  settings.yml  test_mqtt.sh
.github/workflows/: black.yml  docker-build.yml  docker.yml  flake8.yml  mypy.yml
examples/sample_documents/: fastapi_intro.txt  python_intro.txt
ragpipe/: __main__.py  config.py  utils.py
ragpipe/handlers/: __init__.py  chat.py  chunk.py  chunker.py  loader_web.py  loader_wikipedia.py  text.py  utils.py  vectorstore.py
ragpipes/: __main__.py  config.py  protocol.py  tests.py
ragpipes/handlers/: chat.py  chunker.py  loader_sitemap.py  loader_text.py  loader_web.py  loader_wikipedia.py  translate_llmtranslate.py  utils.py  vectorstore.py
src/ragpipes/: __init__.py  main.py  settings.py
src/ragpipes/agent/: __init__.py  rag_agent.py
src/ragpipes/api/: __init__.py  routes.py
src/ragpipes/cli/: __init__.py  api_client.py  env.py  main.py  utils.py
src/ragpipes/embeddings/: __init__.py  external_client.py  mock_client.py
src/ragpipes/ingestion/: __init__.py  document_processor.py
src/ragpipes/rag/: chroma_store.py  retriever.py
tests/: test_agent.py  test_rag.py
