[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain[openai]>=0.3.21",
    "langchain-openai>=0.3.10",
    "python-dotenv>=1.0.1",
    "langchain-core>=0.3.48",
    "langchain-text-splitters>=0.3.7",
    "langchain-community>=0.3.20",
    "langgraph>=0.3.19",
    "bs4>=0.0.2",
    "langchain-google-vertexai>=2.0.16",
    "firecrawl-py>=1.15.0",
    "langchain-postgres>=0.0.13",
    "psycopg[binary]>=3.2.6",
]
